--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
     <!-- community section -->
     <div class="community-section" id="community">
       <div class="container">
-
         <div class="row">
           <div class="col-lg-6">
             <div class="comunity-icons text-center">
@@ -148,16 +147,18 @@
                 <span><i class="bi bi-twitter-x"></i></span
               ></a>
               <a href="">
-                <span><i class="bi bi-telegram"></i></span
-              ></a>
+                 <i class="fa-brands fa-telegram" style="color: #74C0FC; background-color: white; padding: 18px; font-size: 40px;"></i>
+              </a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="community-images text-center">
               <h2>Buy LaserCats Here</h2>
               <div class="jupiter-image">
-               <a href=""> <img src="./asset/images/Jupiter.png" alt=""></a>
-               <a href=""> <img src="./asset/images/logo-with-text.png" alt=""></a>
+                <a href=""> <img src="./asset/images/Jupiter.png" alt="" /></a>
+                <a href="">
+                  <img src="./asset/images/logo-with-text.png" alt=""
+                /></a>
               </div>
             </div>
           </div>
@@ -168,6 +169,7 @@
         </div>
       </div>
     </div>
+    <script src="https://kit.fontawesome.com/7512ad9635.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
