--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
     <!-- community section -->
     <div class="community-section" id="community">
       <div class="container">
-        <div class="row">
+        <div class="contact-adress text-center mt-5">
+          <h2>contact adress</h2>
+          <p>khtjkeulk790347805bmfdm97790hhg</p>
+        </div>
+        <div class="row mt-5">
           <div class="col-lg-6">
             <div class="comunity-icons text-center">
               <h2>follow us</h2>
@@ -163,10 +167,7 @@
             </div>
           </div>
         </div>
-        <div class="contact-adress text-center mt-5">
-          <h2>contact adress</h2>
-          <p>khtjkeulk790347805bmfdm97790hhg</p>
-        </div>
+       
       </div>
     </div>
     <script src="https://kit.fontawesome.com/7512ad9635.js" crossorigin="anonymous"></script>
