--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand d-flex item-center" href="#">
           <img
             src="./asset/images/askai_379056-removebg-preview.png"
             width="16%"
@@ -55,16 +55,16 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">about</a>
+              <a class="nav-link about" href="#about">about</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#chart">Chart</a>
+              <a class="nav-link about" href="#chart">Chart</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">whitepaper</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#community">community</a>
+              <a class="nav-link community" href="#community">community</a>
             </li>
           </ul>
         </div>
@@ -170,6 +170,29 @@
        
       </div>
     </div>
+    <!-- tokenomics -->
+    <div class="tokenomics-section">
+      <h2 class="text-center pt-5">Tokenomics</h2>
+      <div class="wrapper">
+          <div class="containers">
+              <i class="fas fa-utensils"></i>
+              <span class="num" data-val="0">100</span>
+              <span class="text">Taxes</span>
+          </div>
+          <div class="containers">
+              <i class="fas fa-smile-beam"></i>
+              <span class="num" data-val="1000000">9000000</span>
+              <span class="text">Supply</span>
+          </div>
+          <div class="containers">
+              <i class="fas fa-list"></i>
+              <span class="num" data-val="0">100</span>
+              <span class="text">Dev Wallet</span>
+          </div>
+      </div>
+  </div>
+    
+    <script src="./app.js"></script>
     <script src="https://kit.fontawesome.com/7512ad9635.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
