--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link " aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link about" href="#about">about</a>
@@ -185,7 +185,7 @@
               <span class="text">Supply</span>
           </div>
           <div class="containers">
-              <i class="fas fa-list"></i>
+            <i class="bi bi-wallet2"></i>
               <span class="num" data-val="0">100</span>
               <span class="text">Dev Wallet</span>
           </div>
