--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+       <!-- animation link -->
+       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar start -->
@@ -73,8 +75,8 @@
     <!-- navbar end -->
     <!-- hero section start -->
     <div class="hero-section">
-      <div class="hero-content-sec">
-        <div class="hero-content">
+      <div class="hero-content-sec" >
+        <div class="hero-content" data-aos="fade-up" data-aos-duration="2000">
           <h4>the coin</h4>
           <h2>for all frens</h2>
           <button><a href="">buy now</a></button>
@@ -90,7 +92,7 @@
           </div>
           <div class="about-para">
             <h2>Watch out - here comes OCTO!</h2>
-            <p>
+            <p data-aos="fade-right" data-aos-duration="2000">
               OCTO, also known as Peepo or Helper, and commonly mistaken for
               Pepe, is used to represent a much younger, kinder and more naive
               anthropomorphic frog. From humble beginnings in Finland, OCTO
@@ -109,17 +111,17 @@
     <div class="chart-section" id="chart">
       <div class="container text-center">
         <div class="row">
-          <h2>chart</h2>
-          <h4 style="padding-top: 40px">Check the Latest</h4>
-          <h4>for $LCATS</h4>
-          <p>Choose your preferred DEX viewer</p>
+          <h2 data-aos="fade-up" data-aos-duration="2000">chart</h2>
+          <h4 style="padding-top: 40px" data-aos="fade-up" data-aos-duration="2000">Check the Latest</h4>
+          <h4 data-aos="fade-up" data-aos-duration="2000">for $LCATS</h4>
+          <p data-aos="fade-up" data-aos-duration="2000">Choose your preferred DEX viewer</p>
           <div class="chart-images">
-            <div class="image1">
+            <div class="image1" data-aos="fade-left" data-aos-duration="2000">
               <a href="">
                 <img src="./asset/images/Dexscreener.png" alt=""
               /></a>
             </div>
-            <div class="image1">
+            <div class="image1" data-aos="fade-right" data-aos-duration="2000">
               <a href="">
                 <img
                   src="./asset/images/DEXTools_-white.png"
@@ -127,7 +129,7 @@
                   alt=""
               /></a>
             </div>
-            <div class="image1">
+            <div class="image1" data-aos="fade-down" data-aos-duration="2000">
               <a href="">
                 <img src="./asset/images/geckoterminal_logo_dark.webp" alt=""
               /></a>
@@ -140,8 +142,8 @@
     <div class="community-section" id="community">
       <div class="container">
         <div class="contact-adress text-center mt-5">
-          <h2>contact adress</h2>
-          <p>khtjkeulk790347805bmfdm97790hhg</p>
+          <h2 data-aos="fade-down" data-aos-duration="2000">contact adress</h2>
+          <p data-aos="fade-up" data-aos-duration="2000">khtjkeulk790347805bmfdm97790hhg</p>
         </div>
         <div class="row mt-5">
           <div class="col-lg-6">
@@ -158,7 +160,7 @@
           <div class="col-lg-6">
             <div class="community-images text-center">
               <h2>Buy LaserCats Here</h2>
-              <div class="jupiter-image">
+              <div class="jupiter-image" data-aos="fade-up" data-aos-duration="2000">
                 <a href=""> <img src="./asset/images/Jupiter.png" alt="" /></a>
                 <a href="">
                   <img src="./asset/images/logo-with-text.png" alt=""
@@ -174,17 +176,17 @@
     <div class="tokenomics-section">
       <h2 class="text-center pt-5">Tokenomics</h2>
       <div class="wrapper">
-          <div class="containers">
+          <div class="containers" data-aos="fade-right" data-aos-duration="2000">
               <i class="fas fa-utensils"></i>
               <span class="num" data-val="0">100</span>
               <span class="text">Taxes</span>
           </div>
-          <div class="containers">
+          <div class="containers" data-aos="fade-lefy" data-aos-duration="2000">
               <i class="fas fa-smile-beam"></i>
               <span class="num" data-val="1000000">9000000</span>
               <span class="text">Supply</span>
           </div>
-          <div class="containers">
+          <div class="containers" data-aos="fade-up" data-aos-duration="2000">
             <i class="bi bi-wallet2"></i>
               <span class="num" data-val="0">100</span>
               <span class="text">Dev Wallet</span>
@@ -199,5 +201,9 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
