--- a/index.html
+++ b/index.html
@@ -25,61 +25,86 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-       <!-- animation link -->
-       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- animation link -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand d-flex item-center" href="#">
-          <img
-            src="./asset/images/askai_379056-removebg-preview.png"
-            width="16%"
-            alt=""
-          />
-          <span>octo</span>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link about" href="#about">about</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link about" href="#chart">Chart</a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">whitepaper</a>
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link community" href="#community">community</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+   
     <!-- navbar end -->
     <!-- hero section start -->
     <div class="hero-section">
-      <div class="hero-content-sec" >
-        <div class="hero-content" data-aos="fade-up" data-aos-duration="2000">
-          <h4>the coin</h4>
-          <h2>for all frens</h2>
-          <button><a href="">buy now</a></button>
+      <nav class="navbar navbar-expand-lg navbar-sticky" id="navbar">
+        <div class="container">
+          <a class="navbar-brand d-flex item-center" href="#">
+            <img
+              src="./asset/images/askai_379056-removebg-preview.png"
+              width="16%"
+              alt=""
+            />
+            <span>octo</span>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link about" href="#about">about</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link about" href="#chart">Chart</a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="#">whitepaper</a>
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link community" href="#community">community</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link community" href="#Tokenomics">Tokenomic</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7">
+            <div class="hero-content text-white">
+              <h2>the first crypto project to build its own octo shelters</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint id
+                et consequuntur quam modi fugiat, quaerat, dolorem rerum iusto
+                repudiandae ratione exercitationem dolorum a placeat cum quod,
+                enim dolor cumque.
+              </p>
+              <div class="contact-adress text-center mt-5">
+                <h2 data-aos="fade-down" data-aos-duration="2000">
+                  contract address
+                </h2>
+                <p class="w-100" data-aos="fade-up" data-aos-duration="2000">
+                  9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <div class="hero-img">
+              <img src="./asset/images/askai_379056-removebg-preview.png" alt="">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -112,9 +137,17 @@
       <div class="container text-center">
         <div class="row">
           <h2 data-aos="fade-up" data-aos-duration="2000">chart</h2>
-          <h4 style="padding-top: 40px" data-aos="fade-up" data-aos-duration="2000">Check the Latest</h4>
+          <h4
+            style="padding-top: 40px"
+            data-aos="fade-up"
+            data-aos-duration="2000"
+          >
+            Check the Latest
+          </h4>
           <h4 data-aos="fade-up" data-aos-duration="2000">for $LCATS</h4>
-          <p data-aos="fade-up" data-aos-duration="2000">Choose your preferred DEX viewer</p>
+          <p data-aos="fade-up" data-aos-duration="2000">
+            Choose your preferred DEX viewer
+          </p>
           <div class="chart-images">
             <div class="image1" data-aos="fade-left" data-aos-duration="2000">
               <a href="">
@@ -142,8 +175,12 @@
     <div class="community-section" id="community">
       <div class="container">
         <div class="contact-adress text-center mt-5">
-          <h2 data-aos="fade-down" data-aos-duration="2000">contact adress</h2>
-          <p data-aos="fade-up" data-aos-duration="2000">khtjkeulk790347805bmfdm97790hhg</p>
+          <h2 data-aos="fade-down" data-aos-duration="2000">
+            contract address
+          </h2>
+          <p data-aos="fade-up" data-aos-duration="2000">
+            9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
+          </p>
         </div>
         <div class="row mt-5">
           <div class="col-lg-6">
@@ -153,14 +190,26 @@
                 <span><i class="bi bi-twitter-x"></i></span
               ></a>
               <a href="">
-                 <i class="fa-brands fa-telegram" style="color: #74C0FC; background-color: white; padding: 18px; font-size: 40px;"></i>
+                <i
+                  class="fa-brands fa-telegram"
+                  style="
+                    color: #74c0fc;
+                    background-color: white;
+                    padding: 18px;
+                    font-size: 40px;
+                  "
+                ></i>
               </a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="community-images text-center">
               <h2>Buy LaserCats Here</h2>
-              <div class="jupiter-image" data-aos="fade-up" data-aos-duration="2000">
+              <div
+                class="jupiter-image"
+                data-aos="fade-up"
+                data-aos-duration="2000"
+              >
                 <a href=""> <img src="./asset/images/Jupiter.png" alt="" /></a>
                 <a href="">
                   <img src="./asset/images/logo-with-text.png" alt=""
@@ -169,33 +218,32 @@
             </div>
           </div>
         </div>
-       
       </div>
     </div>
     <!-- tokenomics -->
-    <div class="tokenomics-section">
+    <div class="tokenomics-section" id="Tokenomics">
       <h2 class="text-center pt-5">Tokenomics</h2>
       <div class="wrapper">
-          <div class="containers" data-aos="fade-right" data-aos-duration="2000">
-              <i class="fas fa-utensils"></i>
-              <span class="num" data-val="0">100</span>
-              <span class="text">Taxes</span>
-          </div>
-          <div class="containers" data-aos="fade-lefy" data-aos-duration="2000">
-              <i class="fas fa-smile-beam"></i>
-              <span class="num" data-val="1000000000">9000000000</span>
-              <span class="text">Supply</span>
-          </div>
-          <div class="containers" data-aos="fade-up" data-aos-duration="2000">
-            <i class="bi bi-wallet2"></i>
-              <span class="num" data-val="0">100</span>
-              <span class="text">Dev Wallet</span>
-          </div>
+        <div class="containers" data-aos="fade-right" data-aos-duration="2000">
+          <span class="num" data-val="0">100</span>
+          <span class="text">Taxes</span>
+        </div>
+        <div class="containers" data-aos="fade-lefy" data-aos-duration="2000">
+          <span class="num" data-val="1000000000">999999900</span>
+          <span class="text">Supply</span>
+        </div>
+        <div class="containers" data-aos="fade-up" data-aos-duration="2000">
+          <span class="num" data-val="0">100</span>
+          <span class="text">Dev Wallet</span>
+        </div>
       </div>
-  </div>
-    
+    </div>
+
     <script src="./app.js"></script>
-    <script src="https://kit.fontawesome.com/7512ad9635.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7512ad9635.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
