--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
               <li class="nav-item">
                 <a class="nav-link community" href="#Tokenomics">Tokenomic</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link community" href="">buy</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -90,14 +93,22 @@
                 repudiandae ratione exercitationem dolorum a placeat cum quod,
                 enim dolor cumque.
               </p>
-              <div class="contact-adress text-center mt-5">
-                <h2 data-aos="fade-down" data-aos-duration="2000">
-                  contract address
-                </h2>
-                <p class="w-100" data-aos="fade-up" data-aos-duration="2000">
-                  9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
-                </p>
-              </div>
+              <div class="input-groups d-flex">
+                <button>solscan</button>
+                <p id="contract-address">9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo</p>
+                <i class="bi bi-copy" id="copy-icon" onclick="copyToClipboard()"></i>
+            </div>
+            <div class="hero-icon mt-5 ms-3 ">
+              <a href="">
+                <span><i class="bi bi-twitter-x "></i></span
+              ></a>
+              <a  class="ms-2">
+                <i
+                  class="bi bi-telegram"
+                  
+                ></i>
+              </a>
+            </div>
             </div>
           </div>
           <div class="col-lg-5">
