--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <!-- navbar start -->
-   
+
     <!-- navbar end -->
     <!-- hero section start -->
     <div class="hero-section">
@@ -38,8 +38,8 @@
         <div class="container">
           <a class="navbar-brand d-flex item-center" href="#">
             <img
-              src="./asset/images/askai_379056-removebg-preview.png"
-              width="16%"
+              src="./asset/images/octo.png"
+              width="25%"
               alt=""
             />
             <span>octo</span>
@@ -76,7 +76,7 @@
                 <a class="nav-link community" href="#Tokenomics">Tokenomic</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link community" href="">buy</a>
+                <button class="pt-2 pb-2 pe-5 ps-5">buy</button>
               </li>
             </ul>
           </div>
@@ -86,34 +86,38 @@
         <div class="row">
           <div class="col-lg-7">
             <div class="hero-content text-white">
-              <h2>the first crypto project to build its own octo shelters</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint id
-                et consequuntur quam modi fugiat, quaerat, dolorem rerum iusto
-                repudiandae ratione exercitationem dolorum a placeat cum quod,
-                enim dolor cumque.
-              </p>
+              <h2>
+                Welcome to OCTO Coin
+              </h2>
+              <h4>Join us on an adventure into the world of decentralized finance!</h4>
+              <p>Dive into the Octoverse: Where Memes Meet Money!"</p>
               <div class="input-groups d-flex">
                 <button>solscan</button>
-                <p id="contract-address">9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo</p>
-                <i class="bi bi-copy" id="copy-icon" onclick="copyToClipboard()"></i>
-            </div>
-            <div class="hero-icon mt-5 ms-3 ">
-              <a href="">
-                <span><i class="bi bi-twitter-x "></i></span
-              ></a>
-              <a  class="ms-2">
+                <p id="contract-address">
+                  9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
+                </p>
                 <i
-                  class="bi bi-telegram"
-                  
+                  class="bi bi-copy"
+                  id="copy-icon"
+                  onclick="copyToClipboard()"
                 ></i>
-              </a>
-            </div>
+              </div>
+              <div class="hero-icon mt-5 ms-3">
+                <a href="">
+                  <span><i class="bi bi-twitter-x"></i></span
+                ></a>
+                <a class="ms-2">
+                  <i class="bi bi-telegram"></i>
+                </a>
+              </div>
             </div>
           </div>
           <div class="col-lg-5">
             <div class="hero-img">
-              <img src="./asset/images/askai_379056-removebg-preview.png" alt="">
+              <img
+                src="./asset/images/octo.png"
+                alt=""
+              />
             </div>
           </div>
         </div>
@@ -127,17 +131,16 @@
             <h2>about</h2>
           </div>
           <div class="about-para">
-            <h2>Watch out - here comes OCTO!</h2>
+            <h2 class="text-white">Watch out - here comes <span>OCTO</span>!</h2>
             <p data-aos="fade-right" data-aos-duration="2000">
-              OCTO, also known as Peepo or Helper, and commonly mistaken for
-              Pepe, is used to represent a much younger, kinder and more naive
-              anthropomorphic frog. From humble beginnings in Finland, OCTO
-              Apustaja's charm quickly won over the internet, leading to
-              widespread international fame. Now, it is hard to browse sites
-              like Twitter, Reddit, or Forums without seeing his face.With his
-              ever-growing popularity, it seems only natural for the next
-              frontier to be the financial world, we welcome you to join us in
-              this latest adventure.
+              OCTO Coin was born out of a desire to bring fun and accessibility
+              to the world of cryptocurrency. Inspired by the octopus, a
+              creature known for its adaptability and intelligence, we aim to
+              empower individuals to take control of their financial futures.
+              OCTO is more than just a meme; it's a symbol of community,
+              creativity, and collaboration. By harnessing the power of memes,
+              we're building a platform that's inclusive, innovative, and
+              inspiring.
             </p>
           </div>
         </div>
@@ -146,16 +149,7 @@
     <!-- chart section start -->
     <div class="chart-section" id="chart">
       <div class="container text-center">
-        <div class="row">
-          <h2 data-aos="fade-up" data-aos-duration="2000">chart</h2>
-          <h4
-            style="padding-top: 40px"
-            data-aos="fade-up"
-            data-aos-duration="2000"
-          >
-            Check the Latest
-          </h4>
-          <h4 data-aos="fade-up" data-aos-duration="2000">for $LCATS</h4>
+        <div class="row pt-5">
           <p data-aos="fade-up" data-aos-duration="2000">
             Choose your preferred DEX viewer
           </p>
@@ -178,59 +172,16 @@
                 <img src="./asset/images/geckoterminal_logo_dark.webp" alt=""
               /></a>
             </div>
+            <!-- <div class="image1 w-100" data-aos="fade-down" data-aos-duration="2000">
+              <a href="">
+                <img src="./asset/images/WhatsApp_Image_2024-06-02_at_8.30.13_PM-removebg-preview.png" width="100%" alt=""
+              /></a>
+            </div> -->
           </div>
         </div>
       </div>
     </div>
-    <!-- community section -->
-    <div class="community-section" id="community">
-      <div class="container">
-        <div class="contact-adress text-center mt-5">
-          <h2 data-aos="fade-down" data-aos-duration="2000">
-            contract address
-          </h2>
-          <p data-aos="fade-up" data-aos-duration="2000">
-            9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
-          </p>
-        </div>
-        <div class="row mt-5">
-          <div class="col-lg-6">
-            <div class="comunity-icons text-center">
-              <h2>follow us</h2>
-              <a href="">
-                <span><i class="bi bi-twitter-x"></i></span
-              ></a>
-              <a href="">
-                <i
-                  class="fa-brands fa-telegram"
-                  style="
-                    color: #74c0fc;
-                    background-color: white;
-                    padding: 18px;
-                    font-size: 40px;
-                  "
-                ></i>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="community-images text-center">
-              <h2>Buy LaserCats Here</h2>
-              <div
-                class="jupiter-image"
-                data-aos="fade-up"
-                data-aos-duration="2000"
-              >
-                <a href=""> <img src="./asset/images/Jupiter.png" alt="" /></a>
-                <a href="">
-                  <img src="./asset/images/logo-with-text.png" alt=""
-                /></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+   
     <!-- tokenomics -->
     <div class="tokenomics-section" id="Tokenomics">
       <h2 class="text-center pt-5">Tokenomics</h2>
@@ -249,7 +200,137 @@
         </div>
       </div>
     </div>
+    <!-- roadmap -->
+    <div class="roadmap-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="roadmap-content">
+              <h2>A LOOK INTO</h2>
+              <h2>ROADMAPS</h2>
+              <h2>SEASONS</h2>
+              <p>
+                With Season 1 Ending with our play and Duis elementum
+                sollicitudin is yaugue euismods Nulla ulla Player-focused
+                updates games from Mobile App and Enjoy.
+              </p>
+              <button>roadmap</button>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="phase-content">
+              <div class="phase-card">
+                <h2>PHASE 1</h2>
+                <h4>Initiation</h4>
+                <li>
+                  Conceptualization and Development: Birth of the idea and
+                  initial development efforts.
+                </li>
+                <li>
+                  Community Formation: Gathering early supporters and building
+                  initial buzz around OCTO Coin.
+                </li>
+                <li>
+                  Launch: Official introduction of OCTO Coin to the crypto
+                  community, marking its entry into the market.
+                </li>
+              </div>
+              <div class="phase-card">
+                <h2>PHASE 2</h2>
+                <h4>Expansion</h4>
+                <li>
+                  Exchange Listings: Securing listings on major exchanges to
+                  increase liquidity and accessibility.
+                </li>
+                <li>
+                  Community Expansion: Rapid growth in the OCTO Coin community,
+                  attracting new investors and enthusiasts.
+                </li>
+                <li>
+                  Strategic Partnerships: Forming partnerships with key players
+                  in the crypto space to enhance ecosystem development.
+                </li>
+              </div>
+              <div class="phase-card">
+                <h2>PHASE 3</h2>
+                <h4>Evolution</h4>
+                <li>
+                  Technology Upgrades: Continuous improvement of OCTO Coin's
+                  technology stack for better scalability and security.
+                </li>
+                <li>
+                  Market Diversification: Exploring new markets and use cases to
+                  broaden OCTO Coin's reach and utility.
+                </li>
+                <li>
+                  Global Adoption: Focusing on global expansion to establish
+                  OCTO Coin as a mainstream cryptocurrency.
+                </li>
+                <li>
+                  Community Empowerment: Engaging the community through
+                  educational initiatives and governance participation
+                </li>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+ <!-- community section -->
+ <div class="community-section" id="community">
+  <div class="container">
+    <div class="contact-adress text-center mt-5">
+      <h2 data-aos="fade-down" data-aos-duration="2000">
+        contract address
+      </h2>
 
+      <p data-aos="fade-up" data-aos-duration="2000">
+        9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
+      </p>
+    </div>
+    <div class="row mt-5">
+      <div class="col-lg-6">
+        <div class="comunity-icons text-center">
+          <h2>follow us</h2>
+          <p class="text-white">
+            Follow us on social media, join our forums, and participate in
+            community events. Together, we'll build a brighter future with
+            OCTO Coin.
+          </p>
+          <a href="">
+            <span><i class="bi bi-twitter-x"></i></span
+          ></a>
+          <a href="">
+            <i
+              class="fa-brands fa-telegram"
+              style="
+                color: #74c0fc;
+                background-color: white;
+                padding: 18px;
+                font-size: 40px;
+              "
+            ></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="community-images text-center">
+          <h2>Buy LaserCats Here</h2>
+          <div
+            class="jupiter-image"
+            data-aos="fade-up"
+            data-aos-duration="2000"
+          >
+            <a href=""> <img src="./asset/images/Jupiter.png" alt="" /></a>
+            <a href="">
+              <img src="./asset/images/logo-with-text.png" alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
     <script src="./app.js"></script>
     <script
       src="https://kit.fontawesome.com/7512ad9635.js"
