--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
       <nav class="navbar navbar-expand-lg navbar-sticky" id="navbar">
         <div class="container">
           <a class="navbar-brand d-flex item-center" href="#">
-            <img
-              src="./asset/images/octo.png"
-              width="25%"
-              alt=""
-            />
+            <img src="./asset/images/octo.png" width="25%" alt="" />
             <span>octo</span>
           </a>
           <button
@@ -64,7 +60,7 @@
                 <a class="nav-link about" href="#about">about</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link about" href="#chart">Chart</a>
+                <a class="nav-link about" href="#chart">roadmap</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">whitepaper</a>
@@ -86,10 +82,10 @@
         <div class="row">
           <div class="col-lg-7">
             <div class="hero-content text-white">
-              <h2>
-                Welcome to OCTO Coin
-              </h2>
-              <h4>Join us on an adventure into the world of decentralized finance!</h4>
+              <h2>Welcome to OCTO Coin</h2>
+              <h4>
+                Join us on an adventure into the world of decentralized finance!
+              </h4>
               <p>Dive into the Octoverse: Where Memes Meet Money!"</p>
               <div class="input-groups d-flex">
                 <button>solscan</button>
@@ -114,10 +110,7 @@
           </div>
           <div class="col-lg-5">
             <div class="hero-img">
-              <img
-                src="./asset/images/octo.png"
-                alt=""
-              />
+              <img src="./asset/images/octo.png" alt="" />
             </div>
           </div>
         </div>
@@ -131,7 +124,9 @@
             <h2>about</h2>
           </div>
           <div class="about-para">
-            <h2 class="text-white">Watch out - here comes <span>OCTO</span>!</h2>
+            <h2 class="text-white">
+              Watch out - here comes <span>OCTO</span>!
+            </h2>
             <p data-aos="fade-right" data-aos-duration="2000">
               OCTO Coin was born out of a desire to bring fun and accessibility
               to the world of cryptocurrency. Inspired by the octopus, a
@@ -147,6 +142,12 @@
       </div>
     </div>
     <!-- chart section start -->
+    <marquee behavior="" direction=""
+      ><span>$octo</span> <span>$octo</span> <span>$octo</span>
+      <span>$octo</span> <span>$octo</span> <span>$octo</span>
+      <span>$octo</span> <span>$octo</span> <span>$octo</span>
+      <span>$octo</span> <span>$octo</span> <span>$octo</span></marquee
+    >
     <div class="chart-section" id="chart">
       <div class="container text-center">
         <div class="row pt-5">
@@ -181,7 +182,7 @@
         </div>
       </div>
     </div>
-   
+
     <!-- tokenomics -->
     <div class="tokenomics-section" id="Tokenomics">
       <h2 class="text-center pt-5">Tokenomics</h2>
@@ -209,11 +210,7 @@
               <h2>A LOOK INTO</h2>
               <h2>ROADMAPS</h2>
               <h2>SEASONS</h2>
-              <p>
-                With Season 1 Ending with our play and Duis elementum
-                sollicitudin is yaugue euismods Nulla ulla Player-focused
-                updates games from Mobile App and Enjoy.
-              </p>
+              <p>A look into our Roadmap</p>
               <button>roadmap</button>
             </div>
           </div>
@@ -223,15 +220,15 @@
                 <h2>PHASE 1</h2>
                 <h4>Initiation</h4>
                 <li>
-                  Conceptualization and Development: Birth of the idea and
+                  ✔ Conceptualization and Development: Birth of the idea and
                   initial development efforts.
                 </li>
                 <li>
-                  Community Formation: Gathering early supporters and building
+                  ✔ Community Formation: Gathering early supporters and building
                   initial buzz around OCTO Coin.
                 </li>
                 <li>
-                  Launch: Official introduction of OCTO Coin to the crypto
+                  ✔ Launch: Official introduction of OCTO Coin to the crypto
                   community, marking its entry into the market.
                 </li>
               </div>
@@ -239,35 +236,35 @@
                 <h2>PHASE 2</h2>
                 <h4>Expansion</h4>
                 <li>
-                  Exchange Listings: Securing listings on major exchanges to
+                  ✔ Exchange Listings: Securing listings on major exchanges to
                   increase liquidity and accessibility.
                 </li>
                 <li>
-                  Community Expansion: Rapid growth in the OCTO Coin community,
-                  attracting new investors and enthusiasts.
+                  ✔ Community Expansion: Rapid growth in the OCTO Coin
+                  community, attracting new investors and enthusiasts.
                 </li>
                 <li>
-                  Strategic Partnerships: Forming partnerships with key players
-                  in the crypto space to enhance ecosystem development.
+                  ✔ Strategic Partnerships: Forming partnerships with key
+                  players in the crypto space to enhance ecosystem development.
                 </li>
               </div>
               <div class="phase-card">
                 <h2>PHASE 3</h2>
                 <h4>Evolution</h4>
                 <li>
-                  Technology Upgrades: Continuous improvement of OCTO Coin's
+                  ✔ Technology Upgrades: Continuous improvement of OCTO Coin's
                   technology stack for better scalability and security.
                 </li>
                 <li>
-                  Market Diversification: Exploring new markets and use cases to
-                  broaden OCTO Coin's reach and utility.
+                  ✔ Market Diversification: Exploring new markets and use cases
+                  to broaden OCTO Coin's reach and utility.
                 </li>
                 <li>
-                  Global Adoption: Focusing on global expansion to establish
+                  ✔ Global Adoption: Focusing on global expansion to establish
                   OCTO Coin as a mainstream cryptocurrency.
                 </li>
                 <li>
-                  Community Empowerment: Engaging the community through
+                  ✔ Community Empowerment: Engaging the community through
                   educational initiatives and governance participation
                 </li>
               </div>
@@ -276,61 +273,61 @@
         </div>
       </div>
     </div>
- <!-- community section -->
- <div class="community-section" id="community">
-  <div class="container">
-    <div class="contact-adress text-center mt-5">
-      <h2 data-aos="fade-down" data-aos-duration="2000">
-        contract address
-      </h2>
+    <!-- community section -->
+    <div class="community-section" id="community">
+      <div class="container">
+        <div class="contact-adress text-center mt-5">
+          <h2 data-aos="fade-down" data-aos-duration="2000">
+            contract address
+          </h2>
 
-      <p data-aos="fade-up" data-aos-duration="2000">
-        9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
-      </p>
-    </div>
-    <div class="row mt-5">
-      <div class="col-lg-6">
-        <div class="comunity-icons text-center">
-          <h2>follow us</h2>
-          <p class="text-white">
-            Follow us on social media, join our forums, and participate in
-            community events. Together, we'll build a brighter future with
-            OCTO Coin.
+          <p data-aos="fade-up" data-aos-duration="2000">
+            9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
           </p>
-          <a href="">
-            <span><i class="bi bi-twitter-x"></i></span
-          ></a>
-          <a href="">
-            <i
-              class="fa-brands fa-telegram"
-              style="
-                color: #74c0fc;
-                background-color: white;
-                padding: 18px;
-                font-size: 40px;
-              "
-            ></i>
-          </a>
         </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="community-images text-center">
-          <h2>Buy LaserCats Here</h2>
-          <div
-            class="jupiter-image"
-            data-aos="fade-up"
-            data-aos-duration="2000"
-          >
-            <a href=""> <img src="./asset/images/Jupiter.png" alt="" /></a>
-            <a href="">
-              <img src="./asset/images/logo-with-text.png" alt=""
-            /></a>
+        <div class="row mt-5">
+          <div class="col-lg-6">
+            <div class="comunity-icons text-center">
+              <h2>follow us</h2>
+              <p class="text-white">
+                Follow us on social media, join our forums, and participate in
+                community events. Together, we'll build a brighter future with
+                OCTO Coin.
+              </p>
+              <a href="">
+                <span><i class="bi bi-twitter-x"></i></span
+              ></a>
+              <a href="">
+                <i
+                  class="fa-brands fa-telegram"
+                  style="
+                    color: #74c0fc;
+                    background-color: white;
+                    padding: 18px;
+                    font-size: 40px;
+                  "
+                ></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="community-images text-center">
+              <h2>Buy octo</h2>
+              <div
+                class="jupiter-image"
+                data-aos="fade-up"
+                data-aos-duration="2000"
+              >
+                <a href=""> <img src="./asset/images/Jupiter.png" alt="" /></a>
+                <a href="">
+                  <img src="./asset/images/logo-with-text.png" alt=""
+                /></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
     <script src="./app.js"></script>
     <script
       src="https://kit.fontawesome.com/7512ad9635.js"
