--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <span>$octo</span> <span>$octo</span> <span>$octo</span>
       <span>$octo</span> <span>$octo</span> <span>$octo</span></marquee
     >
-    <div class="chart-section" id="chart">
+    <div class="chart-section">
       <div class="container text-center">
         <div class="row pt-5">
           <p data-aos="fade-up" data-aos-duration="2000">
@@ -202,7 +202,7 @@
       </div>
     </div>
     <!-- roadmap -->
-    <div class="roadmap-section">
+    <div class="roadmap-section" id="chart">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -218,7 +218,6 @@
             <div class="phase-content">
               <div class="phase-card">
                 <h2>PHASE 1</h2>
-                <h4>Initiation</h4>
                 <li>
                   ✔ Conceptualization and Development: Birth of the idea and
                   initial development efforts.
@@ -234,7 +233,7 @@
               </div>
               <div class="phase-card">
                 <h2>PHASE 2</h2>
-                <h4>Expansion</h4>
+         
                 <li>
                   ✔ Exchange Listings: Securing listings on major exchanges to
                   increase liquidity and accessibility.
@@ -250,7 +249,7 @@
               </div>
               <div class="phase-card">
                 <h2>PHASE 3</h2>
-                <h4>Evolution</h4>
+                
                 <li>
                   ✔ Technology Upgrades: Continuous improvement of OCTO Coin's
                   technology stack for better scalability and security.
@@ -312,7 +311,7 @@
           </div>
           <div class="col-lg-6">
             <div class="community-images text-center">
-              <h2>Buy octo</h2>
+              <h2 class="text-uppercase">Buy octo</h2>
               <div
                 class="jupiter-image"
                 data-aos="fade-up"
