--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                   <span><i class="bi bi-twitter-x"></i></span
                 ></a>
                 <a class="ms-2">
-                  <i class="bi bi-telegram"></i>
+                  <a href="t.me/octoc1">  <i class="bi bi-telegram"></i></a>
+                
                 </a>
               </div>
             </div>
