--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       </div>
     </div>
     <!-- community section -->
-    <div class="community-section" id="community">
+    <!-- <div class="community-section" id="community">
       <div class="container">
         <div class="contact-adress text-center mt-5">
           <h2 data-aos="fade-down" data-aos-duration="2000">
@@ -344,7 +344,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <script src="./app.js"></script>
     <script
       src="https://kit.fontawesome.com/7512ad9635.js"
