--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
             person acting or refraining from action as a result of any material
             provided or published
           </p>
+          <h4>@ 2024 by octo</h4>
         </div>
       </div>
     </div>
