--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span>octo</span>
           </a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler texr-white"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -80,7 +80,7 @@
       </nav>
       <div class="container">
         <div class="row">
-          <div class="col-lg-7">
+          <div class="col-lg-7 col-md-8 col-sm-12">
             <div class="hero-content text-white">
               <h2>Welcome to OCTO Coin</h2>
               <h4>
@@ -108,7 +108,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-5 col-md-8 col-sm-12" >
             <div class="hero-img">
               <img src="./asset/images/octo.png" alt="" />
             </div>
@@ -225,20 +225,20 @@
     <div class="tokenomics-section" id="Tokenomics">
       <h2 class="text-center pt-5">Tokenomics</h2>
       <div class="wrapper">
-        <div class="containers" data-aos="fade-right" data-aos-duration="2000">
-          <span class="num" data-val="0">100</span>
-          <span class="text">Taxes</span>
-        </div>
-        <div class="containers" data-aos="fade-lefy" data-aos-duration="2000">
-          <span class="num" data-val="1000000000">999999900</span>
-          <span class="text">Supply</span>
-        </div>
-        <div class="containers" data-aos="fade-up" data-aos-duration="2000">
-          <span class="num" data-val="0">100</span>
-          <span class="text">Dev Wallet</span>
-        </div>
+          <div class="containers" data-aos="fade-right" data-aos-duration="2000">
+              <span class="num" data-val="0%">100%</span>
+              <span class="text">Taxes</span>
+          </div>
+          <div class="containers" data-aos="fade-left" data-aos-duration="2000">
+              <span class="num" data-val="1000000000">999999900</span>
+              <span class="text">Supply</span>
+          </div>
+          <div class="containers" data-aos="fade-up" data-aos-duration="2000">
+              <span class="num" data-val="0%">100%</span>
+              <span class="text">Dev Wallet</span>
+          </div>
       </div>
-    </div>
+  </div>
     <!-- roadmap -->
     <div class="roadmap-section" id="chart">
       <div class="container">
@@ -248,7 +248,7 @@
               <h2>A LOOK INTO</h2>
               <h2>ROADMAPS</h2>
               <h2>SEASONS</h2>
-              <p>A look into our Roadmap</p>
+              
               <button>roadmap</button>
             </div>
           </div>
