--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a class="nav-link about" href="#about">about</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link about" href="#chart">roadmap</a>
+                <a class="nav-link roadmap" href="#roadmap">roadmap</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">whitepaper</a>
@@ -88,9 +88,9 @@
               </h4>
               <p>Dive into the Octoverse: Where Memes Meet Money!"</p>
               <div class="input-groups d-flex">
-                <button>solscan</button>
+                <a href="https://solscan.io/token/9hugfmuj1mwPT9ws5fUvtyr6bEGapWSfbvYKGL6Zdcra">  <button>solscan</button></a>
                 <p id="contract-address">
-                  9B7d6ez6UNaDhzFNCQ8KrdXxndz7vRyL6e4NHLpdddoo
+                  9hugfmuj1mwPT9ws5fUvtyr6bEGapWSfbvYKGL6Zdcra
                 </p>
                 <i
                   class="bi bi-copy"
@@ -99,11 +99,11 @@
                 ></i>
               </div>
               <div class="hero-icon mt-5 ms-3">
-                <a href="">
+                <a href="https://x.com/octocoinreal">
                   <span><i class="bi bi-twitter-x"></i></span
                 ></a>
                 <a class="ms-2">
-                  <a href="t.me/octoc1"> <i class="bi bi-telegram"></i></a>
+                  <a href="https://t.me/octocoins"> <i class="bi bi-telegram"></i></a>
                 </a>
               </div>
             </div>
@@ -240,7 +240,7 @@
       </div>
   </div>
     <!-- roadmap -->
-    <div class="roadmap-section" id="chart">
+    <div class="roadmap-section" id="roadmap">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
