--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">whitepaper</a>
               </li> -->
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link community" href="#community">community</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link community" href="#Tokenomics">Tokenomic</a>
               </li>
